--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.3",
+    "bcryptjs": "^2.4.3",
+    "csurf": "^1.11.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.0.0",
+    "express-mysql-session": "^2.1.4",
+    "express-session": "^1.17.1",
     "handlebars": "^4.7.6",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
