--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "handlebars": "^4.7.6",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
+    "nodemailer": "^6.4.11",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "sequelize": "^6.3.3"
   },
   "devDependencies": {
