--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@handlebars/allow-prototype-access": "^1.0.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "csurf": "^1.11.0",
     "express": "^4.17.1",
@@ -20,6 +21,7 @@
     "express-mysql-session": "^2.1.4",
     "express-session": "^1.17.1",
     "handlebars": "^4.7.6",
+    "helmet": "^4.1.0",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "nodemailer": "^6.4.11",
