--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.3",
+    "aws-sdk": "^2.745.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
@@ -23,6 +24,7 @@
     "handlebars": "^4.7.6",
     "helmet": "^4.1.0",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "mysql2": "^2.1.0",
     "nodemailer": "^6.4.11",
     "nodemailer-sendgrid-transport": "^0.2.0",
